fix(tabs): align tab panel with the menu area, not the arrows

--- a/src/Tabs/index.scss
+++ b/src/Tabs/index.scss
@@ -73,6 +73,7 @@
 
 .panel-responsive {
   padding-left: 32px;
+  padding-right: 32px;
 }
 
 .display-flex {
